--- a/.github/workflows/ci-ubuntu.yml
+++ b/.github/workflows/ci-ubuntu.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Pipeline Live
+name: Pipeline Researcg
 
 on:
   push:
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.6]
+        python-version: [3.10.0]
 
     steps:
     - uses: actions/checkout@v2
@@ -31,9 +31,9 @@ jobs:
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
-        pipenv run flake8 ./pipeline_live ./tests --count --select=E9,F63,F7,F82 --show-source --statistics
+        pipenv run flake8 ./pipeline_research ./tests --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        pipenv run flake8 ./pipeline_live ./tests --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        pipenv run flake8 ./pipeline_research ./tests --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
         pipenv run pytest
