--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,9 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-alpaca-trade-api = "==1.5.0"
+alpaca-trade-api = ">=1.5.0"
 iexfinance = ">=0.4.1"
-zipline = "==1.3.0"
+zipline-reloaded = "==2.4"
 numpy = "*"
 
 [dev-packages]
@@ -15,4 +15,4 @@ pytest-cov = "*"
 flake8 = "*"
 
 [requires]
-python_version = "3.6"
+python_version = "3.10"
