install test deps

--- a/.github/workflows/ci-ubuntu.yml
+++ b/.github/workflows/ci-ubuntu.yml
@@ -23,7 +23,7 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+    - name: Compile TA-lib
       run: |
         wget http://prdownloads.sourceforge.net/ta-lib/ta-lib-0.4.0-src.tar.gz
         tar -xzf ta-lib-0.4.0-src.tar.gz
@@ -32,14 +32,16 @@ jobs:
         make
         sudo make install
         cd ..
+    - name: Install dependencies
+      run: |
         python -m pip install --upgrade pip
-        python -m pip install .
+        python -m pip install -e '.[dev]'
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
-        pipenv run flake8 ./pipeline_research ./tests --count --select=E9,F63,F7,F82 --show-source --statistics
+        flake8 ./pipeline_research ./tests --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        pipenv run flake8 ./pipeline_research ./tests --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        flake8 ./pipeline_research ./tests --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pipenv run pytest
+        pytest
